tests/negative/typecheck/try_function_incompat.orng
// try_function_incompat.orng:10:19: error: expected a value of type `(ok: Int | err: ())`, got a value of type `(ok: Int | err: Bool)`
//     let x = try g()
//                  ^
// 
fn main() -> Int {
    f() catch 0
}

fn f() -> Bool!Int {
    let x = try g()
    .ok(x)
}

fn g() -> ()!Int {
    return .err
}